--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,14 +13,12 @@ a {
 
 .list {
   background: #fff;
-  width: 80%;
-  min-width: 500px;
-  margin: 80px auto 0;
-  border-top: 40px solid #5a6772;
+  width: 100%;
+  margin: 30px auto 10px;
   text-align: left; }
   .list .item {
     border-bottom: 2px solid #edeff0;
-    padding: 17px 0 18px 17px; }
+    padding: 17px 0 18px 0; }
     .list .item label {
       padding-left: 5px;
       cursor: pointer; }
@@ -33,8 +31,8 @@ a {
       padding: 15px 0 15px 10px;
       width: 60%; }
     .list .item .actions {
-      float: right;
-      margin-right: 20px; }
+      /*float: right;
+      margin-right: 20px;*/ }
       .list .item .actions .delete {
         color: #ed5a5a;
         margin-left: 10px; }
