--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/layout.min.css">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/materialize.min.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <!--STYLES END-->
   </head>
 
@@ -92,6 +94,8 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/angular.min.js"></script>
+    <script src="/js/dependencies/init.js"></script>
+    <script src="/js/dependencies/materialize.min.js"></script>
     <script src="/js/app.js"></script>
     <!--SCRIPTS END-->
   </body>
