--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -44,7 +44,7 @@
                 </div>
               </div>
               <div class="row center">
-                <button type="submit" name="action" class="btn">Connexion</button>
+                <button type="submit" name="action" class="btn">Inscription</button>
                 <a href="/login/facebook" class="connect-btn button-facebook btn create-list-button indigo darken-1">Facebook</a>
                 <a href="/login/google" class="connect-btn button-google btn create-list-button red darken-1 disabled">Google</a>
                 <a href="#" class="connect-btn button-windows btn create-list-button blue darken-1 disabled">Twitter</a>
